--- a/styles.css
+++ b/styles.css
@@ -77,19 +77,18 @@ header nav ul li a:hover {
 }
 
 .dropdown-menu {
-    display: none; /* Masqué par défaut */
+    display: none;
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #FFFFFF;
-    border: 1px solid #CCC;
+    background-color: #fff;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    min-width: 150px;
-    z-index: 1000;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
 }
 
 .dropdown-menu li {
